fix #87
Fixes broken one line layout in the new FF113 update

--- a/chrome/includes/cascade-responsive.css
+++ b/chrome/includes/cascade-responsive.css
@@ -1,7 +1,7 @@
 @media (min-width: 1000px) {
 
 
-  #navigator-toolbox { display: flex; flex-wrap: wrap; }
+  #navigator-toolbox { display: flex; flex-wrap: wrap; flex-direction: row; }
 
 
   #nav-bar {
